fix: removes z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,7 +22,6 @@ aln-root {
   //height: 32px;
   //background: rgba(255, 255, 255, 0.2);
   margin: 16px;
-  z-index: 1000;
 
   & > i {
     height: 100%;
